--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,36 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: John Seong
+avatar: /static/images/hello.png
+company: Avanade
+email: sandole97@gmail.com
+github: https://github.com/sandole
+slogan: Thinker's tinkers
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Hi, welcome to my blog!
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+**Who Am I?**
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+My name is John Seong. I am a cloud engineering consultant with Avanade and I am staffed to work on public sector accounts and projects.
+
+I started my career in 2015 where I enroled into a subsized education program by the military where the academic year would be spent studying computer engineering academia and summers were spent supporting military IT and learning a ton of stuff about tech. Feel free to reach out to me for more details about my experience or my resume.
+
+I care about contributing to my community. That is why I decided to start my career off by serving my country. I did this by becoming a military officer and supporting many military operations and exercises. After 7 interesting years of serving in the Canadian military, I have succesfully transitioned into a tech career in the private sector, thanks to Avanade.
+
+In my free time, I play in two different competitive basketball teams, contribute to Green Software Foundation with optimized infrastructure provisioning, attend local Christian services and study endlessly about the cloud.
+
+**My Story**
+
+My first encounter with the web began when I was in elementary school. It was around year 2003 and my school had just introduced its website. In this website, students of each class were able to post contents in their own classroom splash pages. I remember when I discovered how to do this, I proceeded to surf the web for the next 5 hours scavenging funny photos and stories just to repost them for other people's entertainments. From this point on, I believed that the internet connects people.  
+
+I went to a fully subsidized college called Royal Military College of Canada in Kingston, Ontario (Canada) mostly because I was too afraid to take on financial debt. I came from an immigrant family so the idea of student debt or huge university loans did not seem like something I could handle. I have served many years for this country for many years now (almost 7!) and I am looking to switch my career onto a path that I feel more passionate about. I believe my background in aviation, technology and leadership will help me become an excellent software engineer!
+
+**What is here?**
+
+This blog demonstrates many employable skills that I have:
+
+1. Technical writing: technical writing has to do with documenting technical communication used in technical fields - specifically, software/computer engineering. This blog displays a good example of my documentation skills by talking about my life journey. Some of it have to do with my personal life with contents regarding gaming and others have to do with building towards a professional career. Technical writing is an important skill because it is a written form of technical communication with others. Sometimes, it has to do with leaving records for promulgation so others can obtain information without the need for the writer to individually disperse to interested parties. Also, it can be for presenting discussion topics and our technical opinion on certain subjects. This blog is a great way for readers - and potential recruiters - to observe my style for writing technical documents and not documents with amalgamated buzzwords used across the industry. The contents of this blog are also written entirely in Markdown files which are the defacto standard for how project and software documentation should be written. Learn more about technical writing at: https://developers.google.com/tech-writing
+
+2. Web Development: As the title suggests, I have implemented a personal blog using NextJS, React and TailwindCSS. I chose NextJS for the fastest server side rendering and easy template accesses and TailwindCSS for beautiful pre-made components that I felt was easy to imbed into this blog. The source code for this blog is available in my github where interested people can visit and view my coding writing practices.
+
+3. Other contents: The contents of this blog contains information about how I develop myself throughout my career. I have documented information about full-stack web development, implementing cloud solutions and various DevSecOps topics. Continue reading this blog to hopefully some useful information!
